Fix bug with card align-items

--- a/resources/css/utils.css
+++ b/resources/css/utils.css
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    align-items: stretch;
+    align-items: center;
 }
 
 .flex_container > * {
